# clzw

./: .gitignore  CMakeLists.txt  README.md  description.md  launching.md  makefile  tests.md  theory.md
headers/: LZW.h
sources/: LZW.cpp  main.cpp
tests/: CMakeLists.txt  basic_test.cpp
tests/Test1/: 001.clzw
tests/Test10/: 010.clzw
tests/Test11/: 011.clzw
tests/Test12/: 012.clzw
tests/Test13/: 013.clzw
tests/Test14/: 014.clzw
tests/Test15/: 015.clzw
tests/Test17/: 017.ans  017.clzw
tests/Test20/: 020.clzw
tests/Test22/: 022.ans  022.clzw
tests/Test3/: 003.clzw
tests/Test4/: 004.ans  004.clzw
tests/Test5/: 005.clzw
tests/Test6/: 006.clzw
tests/Test8/: 008.ans  008.clzw
tests/Test9/: 009.clzw
